feat-fastapi: Implementado - Registro do usuário

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*__pycache__
 *.py[cod]
 *$py.class
 
@@ -84,6 +85,7 @@ celerybeat-schedule
 
 # Environments
 .venv
+.env
 env/
 venv/
 ENV/
@@ -103,7 +105,10 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+# Sqlite
+*.sqlite
+
+# Others
 .secrets
-.env
 .vscode/launch.json
 .idea
