--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
+# [FLASK]
+FLASK_APP=app:app
+FLASK_DEBUG=False
+
+
+# [FASTAPI]
+
+
+# [DEFAULT]
 SECRET_KEY=''
 DATABASE_URL=''
-TEST_DATABASE=''
 JWT_ALGORITHM=''
