--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ FLASK_DEBUG=False
 
 
 # [DEFAULT]
-SECRET_KEY=''
+SECRET_KEY='159753852456'
 DATABASE_URL=''
-JWT_ALGORITHM=''
+JWT_ALGORITHM='HS512'
+ACCESS_TOKEN_EXPIRE_HOURS=3
