--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,12 @@ venv.bak/
 .secrets
 .vscode/launch.json
 .idea
+
+# Para rodar no bash: tree --gitignore
+# *.png
+# *.jpg
+# *.jpeg
+# *.gif
+# *.mp4
+# *.mp3
+# *.pdf
