--- a/fastapi/tests/pytest.ini
+++ b/fastapi/tests/pytest.ini
@@ -1,9 +1,9 @@
 [pytest]
 markers =
-    token
-    userDefault
-    userAuth
-    userModel
-    userModelResponse
-    userModelRequest
-    tokenJwt
+    token: /token authorization route,
+    userDefault: Default client without authentication and header,
+    userAuth: Client preloaded in the DB, and/or Authenticated,
+    userModel: User creation and manipulation model,
+    userModelResponse: User response template,
+    userModelRequest: User request template,
+    tokenJwt: Creating, configuring and decoding the JWT token,
