Add: CORSMiddleware, e ALLOWED_HOSTS no .env.example

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ FLASK_DEBUG=False
 
 
 # [DEFAULT]
-SECRET_KEY='159753852456'
+ALLOWED_HOSTS=http://localhost,http://localhost:8080
+ACCESS_TOKEN_EXPIRE_HOURS=3
 DATABASE_URL=''
 JWT_ALGORITHM='HS512'
-ACCESS_TOKEN_EXPIRE_HOURS=3
+SECRET_KEY=''
