test: Atualização dos testes de usuario (rotas, modelos), add nova fixture: client_three

--- a/fastapi/tests/pytest.ini
+++ b/fastapi/tests/pytest.ini
@@ -1,9 +1,13 @@
 [pytest]
 markers =
-    token: /token authorization route,
-    userDefault: Default client without authentication and header,
-    userAuth: Client preloaded in the DB, and/or Authenticated,
-    userModel: User creation and manipulation model,
-    userModelResponse: User response template,
-    userModelRequest: User request template,
-    tokenJwt: Creating, configuring and decoding the JWT token,
+    token
+    user
+    userAuth
+    userModel
+    userModelResponse
+    userModelRequest
+    post
+    postModel
+    postModelResponse
+    postModelRequest
+    tokenJwt
