--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ httpcore==0.16.1
 httpx==0.23.1
 idna==3.4
 iniconfig==1.1.1
+install==1.3.5
 MarkupSafe==2.1.1
 ormar==0.12.0
 packaging==21.3
@@ -23,6 +24,7 @@ pyparsing==3.0.9
 pytest==7.2.0
 python-dotenv==0.21.0
 python-jose==3.3.0
+python-multipart==0.0.5
 rfc3986==1.5.0
 rsa==4.9
 six==1.16.0
