--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ ecdsa==0.18.0
 exceptiongroup==1.0.4
 fastapi==0.87.0
 greenlet==2.0.1
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==0.16.1
+httptools==0.5.0
 httpx==0.23.1
 idna==3.4
 iniconfig==1.1.1
@@ -25,6 +27,7 @@ pytest==7.2.0
 python-dotenv==0.21.0
 python-jose==3.3.0
 python-multipart==0.0.5
+PyYAML==6.0
 rfc3986==1.5.0
 rsa==4.9
 six==1.16.0
@@ -34,4 +37,7 @@ starlette==0.21.0
 tomli==2.0.1
 typing_extensions==4.4.0
 uvicorn==0.20.0
+uvloop==0.17.0
+watchfiles==0.18.1
+websockets==10.4
 Werkzeug==2.2.2
