--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,7 @@
 aiosqlite==0.18.0
 anyio==3.6.2
 attrs==22.2.0
+black==22.12.0
 certifi==2022.12.7
 click==8.1.3
 databases==0.6.1
@@ -15,12 +16,19 @@ httpx==0.23.3
 idna==3.4
 iniconfig==2.0.0
 MarkupSafe==2.1.1
+mccabe==0.7.0
+mypy-extensions==0.4.3
 ormar==0.12.0
 packaging==23.0
+pathspec==0.10.3
+platformdirs==2.6.2
 pluggy==1.0.0
 pyasn1==0.4.8
+pycodestyle==2.10.0
 pydantic==1.10.2
+pyflakes==3.0.1
 pytest==7.2.0
+pytest-order==1.0.1
 python-dotenv==0.21.0
 python-jose==3.3.0
 python-multipart==0.0.5
