--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # [FASTAPI]
-
-ALLOWED_HOSTS=http://localhost,http://localhost:8080
-ACCESS_TOKEN_EXPIRE_HOURS=3
+ALLOWED_HOSTS=http://127.0.0.1:8000/,http://localhost,http://localhost:8080
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_MINUTES=15
 DATABASE_URL=''
 JWT_ALGORITHM='HS512'
 SECRET_KEY=''
