--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,21 @@
-# [FASTAPI]
 ALLOWED_HOSTS=http://127.0.0.1:8000/,http://localhost,http://localhost:8080
+
+[DEVELOPMENT]
+DATABASE_URL='sqlite:///db.sqlite'
+
+[SECRET - AUTH]
+SECRET_KEY=''
+JWT_ALGORITHM='HS512'
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_MINUTES=15
-DATABASE_URL=''
-JWT_ALGORITHM='HS512'
-SECRET_KEY=''
+
+[EMAIL]
+MAIL_USERNAME=''
+MAIL_PASSWORD=''
+
+[DATABASE - PRODUCTION]
+DATABASE_HOST=''
+DATABASE_PORT=''
+DATABASE_NAME=''
+DATABASE_USERNAME=''
+DATABASE_PASSWORD=''
