--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 aiosqlite==0.18.0
 anyio==3.6.2
+asyncpg==0.27.0
 attrs==22.2.0
 black==22.12.0
 certifi==2022.12.7
@@ -23,11 +24,13 @@ packaging==23.0
 pathspec==0.10.3
 platformdirs==2.6.2
 pluggy==1.0.0
+psycopg2-binary==2.9.5
 pyasn1==0.4.8
 pycodestyle==2.10.0
 pydantic==1.10.2
 pyflakes==3.0.1
 pytest==7.2.0
+pytest-asyncio==0.20.3
 pytest-order==1.0.1
 python-dotenv==0.21.0
 python-jose==3.3.0
