--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiosqlite==0.18.0
 anyio==3.6.2
+asyncpg==0.27.0
 click==8.1.3
 databases==0.6.1
 ecdsa==0.18.0
@@ -10,6 +11,7 @@ h11==0.14.0
 idna==3.4
 MarkupSafe==2.1.1
 ormar==0.12.0
+psycopg2-binary==2.9.5
 pyasn1==0.4.8
 pydantic==1.10.2
 python-dotenv==0.21.0
