--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,29 @@
+# [SET - DEVELOPMENT OR PRODUCTION]
+ENVIRONMENT=''
+
+
+# [HOSTS - SEPARATE HOSTS BY -> ,]
 ALLOWED_HOSTS=http://127.0.0.1:8000/,http://localhost,http://localhost:8080
 
-[DEVELOPMENT]
-DATABASE_URL='sqlite:///db.sqlite'
 
-[SECRET - AUTH]
+# [SECRET - AUTH]
 SECRET_KEY=''
 JWT_ALGORITHM='HS512'
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_MINUTES=15
+URL_RESET_PWD=''
 
-[EMAIL]
+
+# [EMAIL]
 MAIL_USERNAME=''
 MAIL_PASSWORD=''
 
-[DATABASE - PRODUCTION]
+
+# [DEVELOPMENT]
+DATABASE_TEST_URL=''
+
+
+# [PRODUCTION]
 DATABASE_HOST=''
 DATABASE_PORT=''
 DATABASE_NAME=''
