fix: Correção na função async para atualizar a nova senha na rota /password/reset

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ SECRET_KEY=''
 JWT_ALGORITHM='HS512'
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_MINUTES=15
+PWD_RECOVER_TOKEN_EXPIRE_MINUTES=15
 URL_RESET_PWD=''
 
 
