--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,40 @@
-# [SET - DEVELOPMENT OR PRODUCTION]
-ENVIRONMENT=''
+# [SET - DEV | PRO | TEST]
+ENV='DEV'
 
 
 # [HOSTS - SEPARATE HOSTS BY -> ,]
 ALLOWED_HOSTS=http://127.0.0.1:8000/,http://localhost,http://localhost:8080
 
 
-# [SECRET - AUTH]
-SECRET_KEY=''
+# [SECRET]
+SECRET_KEY=
 JWT_ALGORITHM='HS512'
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_MINUTES=15
-PWD_RECOVER_TOKEN_EXPIRE_MINUTES=15
-URL_RESET_PWD=''
+
+
+# [AUTH]
+ACCESS_TOKEN_EXPIRE_MINUTES=15
+REFRESH_TOKEN_EXPIRE_MINUTES=10
+PWD_RECOVER_TOKEN_EXPIRE_MINUTES=5
+
+URL_RESET_PWD=                            # ex: http://ROUTE-FRONTEND/reset/
 
 
 # [EMAIL]
-MAIL_USERNAME=''
-MAIL_PASSWORD=''
+MAIL_USERNAME=
+MAIL_PASSWORD=
 
 
 # [DEVELOPMENT]
-DATABASE_TEST_URL=''
+DATABASE_DEV_URL='sqlite:///dbDev.sqlite'
+
+
+# [TEST]
+DATABASE_TEST_URL='sqlite:///dbTest.sqlite'
 
 
 # [PRODUCTION]
-DATABASE_HOST=''
-DATABASE_PORT=''
-DATABASE_NAME=''
-DATABASE_USERNAME=''
-DATABASE_PASSWORD=''
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
