--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
     "python.formatting.provider": "black",
-    "python.analysis.typeCheckingMode": "basic",
+    "python.analysis.typeCheckingMode": "off",
     "[python]": {
         "editor.rulers": [
             79
@@ -12,7 +12,7 @@
             "source.organizeImports": true
         }
     },
-    "workbench.colorTheme": "Ayu Mirage Bordered",
+    "workbench.colorTheme": "Dracula",
     "workbench.startupEditor": "readme",
     "python.testing.pytestArgs": [
         "tests"
