--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,13 @@ DATABASE_PORT=
 DATABASE_NAME=
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
+
+
+# [CLOUD STORAGE]
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
+
+# EX: FOLDER_ROOT/FOLDER
+FOLDER_AVATAR=
+FOLDER_BACKGROUND=
