--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,7 @@ attrs==22.2.0
 black==22.12.0
 certifi==2022.12.7
 click==8.1.3
+cloudinary==1.31.0
 databases==0.6.1
 ecdsa==0.18.0
 exceptiongroup==1.1.0
@@ -43,5 +44,6 @@ SQLAlchemy==1.4.41
 starlette==0.22.0
 tomli==2.0.1
 typing_extensions==4.4.0
+urllib3==1.26.14
 uvicorn==0.20.0
 Werkzeug==2.2.2
