--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiosqlite==0.18.0
 anyio==3.6.2
 asyncpg==0.27.0
 click==8.1.3
+cloudinary==1.31.0
 databases==0.6.1
 ecdsa==0.18.0
 fastapi==0.89.1
@@ -23,5 +24,6 @@ sniffio==1.3.0
 SQLAlchemy==1.4.41
 starlette==0.22.0
 typing_extensions==4.4.0
+urllib3==1.26.14
 uvicorn==0.20.0
 Werkzeug==2.2.2
