tests: Add Rota e Model de Reply; add Request e Update Password

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -3,12 +3,21 @@ markers =
     token
     tokenJwt
     tokenModel
+    
     user
     userModel
     userModelResponse
     userModelRequest
+    
     password
+    passwordModelRequest
+
     post
     postModel
     postModelResponse
     postModelRequest
+    
+    reply
+    replyModel
+    replyModelResponse
+    replyModelRequest
